# libwebauthn-cpp

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.docker/: Dockerfile
gtest/: test_AttestationStatementFidoU2f.cpp  test_AuthenticatorAttestationResponse.cpp  test_AuthenticatorResponse.cpp  test_PublicKeyCredential.cpp  test_PublicKeyCredentialCreationOptions.cpp
include/: AttestationConveyancePreference.h  AttestationStatementFidoU2f.h  AttestationStatementFormatIdentifier.h  AttestedCredentialData.h  AuthenticatorAssertionResponse.h  AuthenticatorAttestationResponse.h  AuthenticatorData.h  AuthenticatorResponse.h  AuthenticatorSelectionCriteria.h  Base64Url.h  Challenge.h  CredentialRecord.h  IAttestationStatement.h  IJsonDeserialize.h  IJsonSerialize.h  PublicKeyCredential.h  PublicKeyCredentialCreationOptions.h  PublicKeyCredentialDescriptor.h  PublicKeyCredentialEntity.h  PublicKeyCredentialParameters.h  PublicKeyCredentialRequestOptions.h  PublicKeyCredentialRpEntity.h  PublicKeyCredentialUserEntity.h  WebauthnException.h  webauthn.h
src/: AttestationConveyancePreference.cpp  AttestationStatementFidoU2f.cpp  AttestationStatementFormatIdentifier.cpp  AttestedCredentialData.cpp  AuthenticatorAssertionResponse.cpp  AuthenticatorAttestationResponse.cpp  AuthenticatorData.cpp  AuthenticatorResponse.cpp  AuthenticatorSelectionCriteria.cpp  Base64Url.cpp  Challenge.cpp  CredentialRecord.cpp  PublicKeyCredential.cpp  PublicKeyCredentialCreationOptions.cpp  PublicKeyCredentialDescriptor.cpp  PublicKeyCredentialEntity.cpp  PublicKeyCredentialParameters.cpp  PublicKeyCredentialRequestOptions.cpp  PublicKeyCredentialRpEntity.cpp  PublicKeyCredentialUserEntity.cpp  WebauthnException.cpp  webauthn.cpp
